--- a/app/globals.css
+++ b/app/globals.css
@@ -2,8 +2,103 @@
 @tailwind components;
 @tailwind utilities;
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+@layer base {
+  :root {
+    /* shared */
+    --bg-light-theme: 0 0% 91%;
+    --bg-dark-theme: 0 0 7%;
+    --light-content-color: 0 0 16;
+    --dark-content-color: 0 0 97;
+
+    --Primary-color-light-theme: 231 100% 60%;
+    --Primary-color-dark-theme: 231 100% 50%;
+
+    --secondary-color-light-theme: 49 98% 60%;
+    --secondary-color-dark-theme: 49 98% 50%;
+
+    /* Primary preset */
+    --primary-h: 222.2;
+    --primary-s: 47.4%;
+    --primary-l: 11.2%;
+
+    /* Secondary preset */
+
+    --background: var(--bg-light-theme);
+    --foreground: var(--light-content-color);
+
+    --card: var(--bg-light-theme);
+    --card-foreground: var(--light-content-color);
+
+    --popover: var(--bg-light-theme);
+    --popover-foreground: var(--light-content-color);
+
+    --primary: var(--Primary-color-light-theme);
+    --primary-foreground: var(--dark-content-color);
+
+    --secondary: var(--secondary-color-light-theme);
+    --secondary-foreground: var(--light-content-color);
+
+    --muted: 210 40% 96.1%;
+    --muted-foreground: 215.4 16.3% 46.9%;
+
+    --accent: 210 40% 96.1%;
+    --accent-foreground: var(--light-content-color);
+
+    --destructive: 0 84.2% 60.2%;
+    --destructive-foreground: var(--dark-content-color);
+
+    --border: 214.3 31.8% 91.4%;
+    --input: 214.3 31.8% 91.4%;
+    --ring: var(--bg-dark-theme);
+    --radius: 0.5rem;
+    --chart-1: 12 76% 61%;
+    --chart-2: 173 58% 39%;
+    --chart-3: 197 37% 24%;
+    --chart-4: 43 74% 66%;
+    --chart-5: 27 87% 67%;
+  }
+
+  .dark {
+    --background: var(--bg-dark-theme);
+    --foreground: var(--dark-content-color);
+
+    --card: var(--bg-dark-theme);
+    --card-foreground: var(--dark-content-color);
+
+    --popover: var(--bg-dark-theme);
+    --popover-foreground: var(--dark-content-color);
+
+    --primary: var(--Primary-color-dark-theme);
+    --primary-foreground: var(--dark-content-color);
+
+    --secondary: var(--secondary-color-dark-theme);
+    --secondary-foreground: var(--dark-content-color);
+
+    --muted: 217.2 32.6% 17.5%;
+    --muted-foreground: 215 20.2% 65.1%;
+
+    --accent: 217.2 32.6% 17.5%;
+    --accent-foreground: var(--dark-content-color);
+
+    --destructive: 0 62.8% 30.6%;
+    --destructive-foreground: var(--dark-content-color);
+
+    --border: 217.2 32.6% 17.5%;
+    --input: 217.2 32.6% 17.5%;
+    --ring: 212.7 26.8% 83.9%;
+    --chart-1: 220 70% 50%;
+    --chart-2: 160 60% 45%;
+    --chart-3: 30 80% 55%;
+    --chart-4: 280 65% 60%;
+    --chart-5: 340 75% 55%;
+  }
+}
+
+@layer base {
+  * {
+    @apply border-border;
+  }
+  body {
+    @apply bg-background text-foreground;
   }
 }
